--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main id="main" class="site-main main">
         <section class="container" id="banner">
-            <img src="./img_cmivqa/logo2.svg" width=80%>
+            <img src="./img_cmivqa/logo2.svg" width=150>
             <div class="title-text-box">
                  <h1 class="display-4 text-bold">CMIVQA</h1>
                 <h2 class="display-5 text-bold">Chinese Medical Instructional Video Question Answering</h2>
@@ -75,18 +75,18 @@
                     </p>
                     <p class="card-text">This shared task includes three tracks: Temporal Answer Grounding in Singe Video (TAGSV), Video Corpus Retrieval (VCR) and Temporal Answer Grounding in Video Corpus (TAGVC).
                     <ul>
-                    <center><img src="./img_cmivqa/track1.png" width=100%></center>
+                    <center><img src="./img_cmivqa/track1.png" width=90%></center>
                     <div>
 <center><h6><br>Fig. 1: Illustration of Temporal Answer Grounding in Singe Video (TAGSV). </h6></center>
 </div>
                         <li ><b>Track 1. Temporal Answer Grounding in Singe Video (TAGSV):</b> As shown in Fig. 1: given a medical or health-related question and a single untrimmed Chinese medical instructional video, this track aims to locate the temporal answer (start and end time points) within the video.</li><!--li>Given the identity and audio signals of the speaker, participants are challenged to develop an algorithm to generate a video that can match the audio signals.</li-->
 
-                    <center><img src="./img_cmivqa/track2.png" width=100% style="margin-top: 15px"></center>
+                    <center><img src="./img_cmivqa/track2.png" width=90% style="margin-top: 15px"></center>
                     <div>
 <center><h6><br>Fig. 2: Illustration of Video Corpus Retrieval (VCR). </h6></center>
 </div>
                     <li><b>Track 2. Video Corpus Retrieval (VCR):</b> As shown in Fig. 2, given a medical or health-related question and a large collection of untrimmed Chinese medical instructional videos, this track aims to find the most relevant video corresponding to the given question in the video corpus.</li><!--li>Given the identity of the listener, and a corresponding talking head video & audio, participants are challenged to develop an algorithm to generate a video that can respond to the speaker's behaviors actively in real-time.</li-->
-                   <center> <img src="./img_cmivqa/track3.png" width=100% style="margin-top: 15px"></center>
+                   <center> <img src="./img_cmivqa/track3.png" width=90% style="margin-top: 15px"></center>
                     <div>
 <center><h6><br>Fig. 3: Illustration of Temporal Answer Grounding in Video Corpus (TAGVC).</h6></center>
 
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                                         <div>
-                    <center><img src="./img_cmivqa/pic4.png" width=100% style="margin-top: 15px"></center>
+                    <center><img src="./pic4.png" width=70% style="margin-top: 15px"></center>
                                                                 </div>
                     <div>
 <center><h6><br>Fig. 3: Illustration of Temporal Answer Grounding in Video Corpus (TAGVC).</h6></center>
@@ -439,23 +439,23 @@
                       </div>
                     <div class="row">
                         <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/libin.png" class="rounded-circle orgnizer-img" width=100/>
+                            <img src="./img_cmivqa/libin.png" class="rounded-circle orgnizer-img" width=60%/>
                             <p class="orgnizer-text">Bin Li<br>College of Electrical and Information Engineering, Hunan University</p>
                         </div>
                         <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/yixuan.jpg" class="rounded-circle orgnizer-img" width=100/>
+                            <img src="./img_cmivqa/yixuan.jpg" class="rounded-circle orgnizer-img" width=60%/>
                             <p class="orgnizer-text">Yixuan Weng<br>National Laboratory of Pattern Recognition Institute of Automation, CAS</p>
                         </div>
                         <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/guohu.jpg" class="rounded-circle orgnizer-img" width=100/>
+                            <img src="./img_cmivqa/guohu.jpg" class="rounded-circle orgnizer-img" width=60%/>
                             <p class="orgnizer-text">Hu Guo<br>College of Electrical and Information Engineering, Hunan University</p>
                         </div>
                         <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/sunbin.jpg" class="rounded-circle orgnizer-img" width=100/>
+                            <img src="./img_cmivqa/sunbin.jpg" class="rounded-circle orgnizer-img" width=60%/>
                             <p class="orgnizer-text">Bin Sun<br>College of Electrical and Information Engineering, Hunan University</p>
                         </div>
                         <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/li.jpg" class="rounded-circle orgnizer-img" width=100/>
+                            <img src="./img_cmivqa/li.jpg" class="rounded-circle orgnizer-img" width=60%/>
                             <p class="orgnizer-text">Shutao Li<br>College of Electrical and Information Engineering, Hunan University</p>
 <!--                        </div>-->
 <!--                        <div class="col orgnizer-box">-->
