--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                                         <div>
-                    <center><img src="./pic4.png" width=70% style="margin-top: 15px"></center>
+                    <center><img src="./img_cmivqa/pic4.png" width=70% style="margin-top: 15px"></center>
                                                                 </div>
                     <div>
 <center><h6><br>Fig. 3: Illustration of Temporal Answer Grounding in Video Corpus (TAGVC).</h6></center>
