--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <center><img src="./img_cmivqa/pic4.png" width=80% style="margin-top: 15px"></center>
                                                                 </div>
                     <div>
-<center><h6><br>Fig. 4 Dataset examples of the TAGV shared task..</h6></center>
+<center><h6><br>Fig. 4 Dataset examples of the TAGV shared task.</h6></center>
                     <p class="card-text">
                     The videos for this competition are crawled from the Chinese medical instructional channels on the YouTube website, where the subtitles (in Chinese) are transcribed from the corresponding video. The frames from the videos have been down-sampled to 16fps. The question and corresponding temporal answer are manually labeled by annotators with the medical background. Each video may contain several question-answer pairs, where each question corresponds to a unique answer. The dataset is split into a training set, a validation set, and a test set. During the competition, the test set along with the true “id” data number is not available to the public. The Fig. 4 shows the dataset examples for the TAGV shared task. The “id” is the sample number which is used for the video retrieval track. The “video_id” means the unique ID from YouTube. The “question” item is written manually by the medical experts. The “start and end second” represent the temporal answer from the corresponding video. As a result, our final goal is to retrieve the target video ID from the test corpus, and then locate the visual answer. More details about the dataset as well as the download links can be found in
                     <a href="https://github.com/cmivqa/NLPCC-2023-Shared-Task-5">https://github.com/cmivqa/NLPCC-2023-Shared-Task-5</a>.
