--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                         </div>
                       </div>
                     <p class="card-text">
-                        <b>Signup to receive updates</b>: using <a href="https://docs.google.com/forms/d/e/1FAIpQLSdYgdkyKO46SsKaMfRmSmMCK6bm5fdNzEOhJSHoqN6zctWB5w/viewform?usp=sf_link">this form</a>
+                        <b>Signup to receive updates</b>: using <a href="http://tcci.ccf.org.cn/conference/2023/dldoc/NLPCC2023.SharedTask5.RegistrationForm.doc">this form</a>
                     </p>
                     <p>The submission deadline is at 11:59 p.m. of the stated deadline date (UTC/GMT+08:00).</p>
                     <table class="table table-striped table-bordered">
