--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li class="nav-item"><a class="nav-link" href="#dates">Dates</a></li>
                 <li class="nav-item"><a class="nav-link" href="#organizers">Organizers</a></li>
                 <li class="nav-item"><a class="nav-link" href="#reference">Reference</a></li>
-<!--                <li class="nav-item"><a class="nav-link" href="/vico.solutions">Leaderboard</a></li>-->
+                <li class="nav-item"><a class="nav-link" href="./leaderboard.html">Leaderboard</a></li>
 <!--                TODO leaderboard-->
             </ul>
             <ul class="navbar-nav ml-auto order-1">
@@ -286,14 +286,14 @@
                             <li>You may provide research associates and colleagues with access to the dataset provided that they first agree to be bound by these terms and conditions.
                             </li>
                             <!--li>
-                                JD.co. reserve the right to terminate your access to the Database at any time. 
+                                JD.co. reserve the right to terminate your access to the Database at any time.
                             </li-->
                             <li>
                                If you are employed by a for-profit, commercial entity, your employer shall also be bound by these terms and conditions, and you hereby represent that you are authorized to enter into this agreement on behalf of such employer.
                             </li>
                             <!--li>
                                 The Intellectual Property Right Law of the People’s Republic of China apply to all
-                                disputes under this agreement.                                 
+                                disputes under this agreement.
                             </li-->
                         </ul>
                     </div>
