--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <li class="nav-item"><a class="nav-link" href="#challenge">Overview</a></li>
                 <li class="nav-item"><a class="nav-link" href="#dataset">Dataset</a></li>
                 <li class="nav-item"><a class="nav-link" href="#dates">Dates</a></li>
+                <li class="nav-item"><a class="nav-link" href="#award">Award</a></li>
                 <li class="nav-item"><a class="nav-link" href="#organizers">Organizers</a></li>
                 <li class="nav-item"><a class="nav-link" href="#reference">Reference</a></li>
                 <li class="nav-item"><a class="nav-link" href="./leaderboard.html">Leaderboard</a></li>
@@ -428,7 +429,25 @@
             </div>
 
 
+            <div class="card cardx" id="award">
+                <div class="card-body">
+                    <div class="media">
+                        <embed src="./img_cmivqa/award.svg" type="image/svg+xml" class="mr-3 align-self-center" width=40/>
+                        <div class="media-body">
+                          <h5 class="mt-0-vico">Award</h5>
 
+                          Awards will be granted to the top 3 teams
+                        </div>
+                        </div>
+                          The top 3 participating teams will be certificated by NLPCC and CCF-NLP, as well as awarded cash rewards.
+                            </br>
+                            The first prize (*1): ￥3000
+                            </br>
+                            The second prize (*1): ￥2000
+                            </br>
+                            The third  prize (*1): ￥1000
+                </div>
+            </div>
 
 
             <div class="card cardx" id="organizers">
