--- a/leaderboard.html
+++ b/leaderboard.html
@@ -162,7 +162,7 @@
                         </div>
                       </div>
                     <p class="card-text">
-                        <b>Signup to receive updates</b>: using <a href="http://tcci.ccf.org.cn/conference/2023/dldoc/NLPCC2023.SharedTask5.RegistrationForm.doc">this form</a>
+                        <b>Signup to receive updates</b>: using <a href="http://tcci.ccf.org.cn/conference/2023/dldoc/NLPCC2023.SharedTask5.RegistrationForm.doc">this form</a> to send organizers.
                     </p>
                     <p>The submission deadline is at 11:59 p.m. of the stated deadline date (UTC/GMT+08:00).</p>
                     <table class="table table-striped table-bordered">
@@ -173,19 +173,23 @@
                           </tr>
                           <tr>
                             <td>Release of detailed task guidelines & training data</td>
-                            <td>April 6, 2023</td>
+                            <td>April 3, 2023</td>
+                          </tr>
+                          <tr>
+                            <td>Release of Test A data</td>
+                            <td>April 10, 2023</td>
                           </tr>
                           <tr>
                             <td>Registration deadline</td>
                             <td>May 5, 2023</td>
                           </tr>
                           <tr>
-                            <td>Release of test data</td>
+                            <td>Release of test B data</td>
                             <td>May 21, 2023</td>
                           </tr>
                           <tr>
-                            <td>Participants' results submission deadline</td>
-                            <td>May 31, 2023</td>
+                            <td>Participants’ final result submission (Test B) deadline:</td>
+                            <td>May 28, 2023</td>
                           </tr>
                           <tr>
                             <td>Evaluation results release and call for system reports and conference paper</td>
