--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <!--                <li class="nav-item"><a class="nav-link" href="https://project.mhzhou.com/vico/">Full Dataset</a></li>-->
 <!--                <li class="nav-item"><a class="nav-link" href="https://arxiv.org/abs/2112.13548">Paper</a></li>-->
                 <li class="nav-item"><a class="nav-link" href="https://github.com/cmivqa/NLPCC-2023-Shared-Task-5">Code</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/WENGSYX/CMIVQA_Baseline">Baseline</a></li>
             </ul>
         </div>
         </div>
@@ -127,6 +128,9 @@
                     <p class="card-text">
                     The videos for this competition are crawled from the Chinese medical instructional channels on the YouTube website, where the subtitles (in Chinese) are transcribed from the corresponding video. The question and corresponding temporal answer are manually labeled by annotators with the medical background. Each video may contain several question-answer pairs, where each question corresponds to a unique answer. The dataset is split into a training set, a validation set, and a test set. During the competition, the test set along with the true “id” data number is not available to the public. The Fig. 4 shows the dataset examples for the CMIVQA shared task. The “id” is the sample number which is used for the video retrieval track. The “video_id” means the unique ID from YouTube. The “question” item is written manually by the medical experts. The “start and end second” represent the temporal answer from the corresponding video. As a result, our final goal is to retrieve the target video ID from the test corpus, and then locate the visual answer. More details about the dataset as well as the download links can be found in
                     <a href="https://github.com/cmivqa/NLPCC-2023-Shared-Task-5">https://github.com/cmivqa/NLPCC-2023-Shared-Task-5</a>.
+                        </br>
+                        </br>
+                        Our baseline is released in <a href="https://github.com/cmivqa/NLPCC-2023-Shared-Task-5">https://github.com/WENGSYX/CMIVQA_Baseline</a>. Any original methods (language/vision/audio/mutlimodal etc.) are welcome.
                    </p>
 <!--                    <p>-->
 <!--                        <a data-toggle="collapse" href="#collapseExample">-->
@@ -204,7 +208,7 @@
                     <p class="card-text">
 <!--                        <strong>Train+Valid+Test Set:</strong> <a href="https://1drv.ms/u/s!Ag220j2nXkVswCSUXjTP_cA3Y0y2?e=9b3VXA" target="_blank">OneDrive</a><br/>-->
                         <strong>Train & Validation Set:</strong> <a href="https://pan.baidu.com/s/1VRJZaQyGn5PbyGt0yVo1Gg?pwd=9874">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1QbY8DEaVLkY2w6vOCWAs4ZQFHgJ3q8ui?usp=sharing">GoogleDrive</a><br/>
-                        <strong>Test Set A:</strong> <a>To be published around April 10th</a><br/>
+                        <strong>Test Set A:</strong> <a href="https://pan.baidu.com/s/1XxoQ-KwUy9qf3Z0RfaPTaw?pwd=9874">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1Fdll0Qn8Ol65Z91u51NOEpBoxAQlrXN4?usp=sharing">GoogleDrive</a> <br/>
                     <strong>Test Set B:</strong> <a>To be published around May 21th</a><br/>
 
                     <h5>Statistics</h5>
@@ -250,7 +254,7 @@
                     All the Train & Dev files include videos, audio, and the corresponding subtitles. The video and the corresponding audio come from Youtube Chinese medical channel,
                     which is obtained by using <a href="https://github.com/pytube">Pytube</a> tools. The subtitle are generated from the <a href="https://github.com/openai/whisper">Whisper</a>, which contains Simplified Chinese and Traditional Chinese tokens.
                     In order to unify the character types of questions and subtitles, we converted the above both into simplified Chinese. As for competition benchmarks, we recommend references [<a href="#ref1">1</a>-<a href="#ref2">2</a>], [<a href="#ref6">6</a>] as strong baselines. Beginners can quickly learn about the content of relevant competitions through references [<a href="#ref3">3</a>-<a href="#ref4">4</a>].
-                    We will provide the baseline and the Test A daset soon, any original methods (language/vision/audio/mutlimodal etc.) are welcome.
+                    The Test A set and baseline are released, and any original methods (language/vision/audio/mutlimodal etc.) are welcome.
 
                         <!--                        <strong>Validation Set:</strong> <a> To be published around May 20th</a><br/>-->
 <!--                        <em>Note: For Train Set, data in <code>listening_head.zip</code> contains the data in <code>talking_head.zip</code>.</em><br/>-->
@@ -389,9 +393,9 @@
                     M R R=\frac{1}{|V|} \sum_{i=1}^{|V|} \frac{1}{\operatorname{Rank}_i}
                     $$
                         where the |<i>V</i>| is the number of the video corpus. For each testing sample <i>V</i><sub>i</sub>, the Rank<sub>i</sub> is the position of the target ground-truth video in the predicted list.<br/>
-                    <b>Note:</b> The main ranking of this track is based on the Overall score. The Overall score is calculated by averaging the R@1, R@10, R@50 and MRR scores, which is shown as follows.
+                    <b>Note:</b> The main ranking of this track is based on the Overall score. The Overall score is calculated by summarizing the R@1, R@10, R@50 and MRR scores, which is shown as follows.
                     $$
-                    \text { Overall }=\frac{1}{|M|} \sum_{i=1}^{|M|} \frac{1}{\text { Value}_i}
+                    \text { Overall }=\sum_{i=1}^{|M|} {\text { Value}_i}
                     $$
                         where the |<i>M</i>| is the number of the evaluation metrics. Value<sub>i</sub> is the i-th metric in the above metrics (R@1, R@10, R@50 and MRR), |<i>M</i>|=4.
                     </li>                    </ul>
@@ -414,6 +418,7 @@
 <!--                            <li><strong>lip landmark distance</strong>: L1 distance of lip landmarks</li>-->
                         </ul>
                         Scripts can be accessed from <a href="https://github.com/cmivqa/NLPCC-2023-Shared-Task-5" target="_blank">this github repo</a>.
+                        Baseline can be accessed from <a href="https://github.com/WENGSYX/CMIVQA_Baseline" target="_blank">this github repo</a>.
                     </p>
                 </div>
             </div>
@@ -430,7 +435,8 @@
                     <p class="card-text">
                         <b>Signup to receive updates</b>: using <a href="http://tcci.ccf.org.cn/conference/2023/dldoc/NLPCC2023.SharedTask5.RegistrationForm.doc">this form</a>
                     </p>
-                    <p>The submission deadline is at 11:59 p.m. of the stated deadline date (UTC/GMT+08:00).</p>
+                    <p>The submission deadline is at 11:59 p.m. of the stated deadline date (UTC/GMT+08:00).</p> </br>
+                    <p>The results of test set A are updated every 3 days for 6 weeks (until May 21, 2023). Then the test set B will be released for the final evaluation. Participants can submit their results to the competition organizer via <a href="http://tcci.ccf.org.cn/conference/2023/dldoc/NLE-mail">E-mail</a> for result registration, and each team does not exceed 3 submissions per day.</p>
                     <table class="table table-striped table-bordered">
                         <tbody>
                           <tr>
@@ -473,7 +479,7 @@
                             <td>Camera-ready paper submission deadline</td>
                             <td>August 1, 2023</td>
                           </tr>
-                          
+
                         </tbody>
                     </table>
                 </div>
@@ -487,16 +493,20 @@
                         <div class="media-body">
                           <h5 class="mt-0-vico">Award</h5>
 
-                          Awards will be granted to the top 3 teams
+                          Awards will be granted to the top 3 teams. Every track has three prizes (￥3000, ￥2000, ￥1000), where all prizes count ￥18000.
                         </div>
                         </div>
                           The top 3 participating teams will be certificated by NLPCC and CCF-NLP, as well as awarded cash rewards.
+                            </br>
                             </br>
                             The first prize (*1): ￥3000
                             </br>
                             The second prize (*1): ￥2000
                             </br>
                             The third  prize (*1): ￥1000
+                    </br>
+                    </br>
+                    The final interpretation right of the award belongs to Hunan University.
                 </div>
             </div>
 
