--- a/leaderboard.html
+++ b/leaderboard.html
@@ -78,15 +78,15 @@
                                   <td><b>mIoU(R@1)</b></td>
                         </tr>
                        <tr>
-                            <td>1</td>
+                            <td>1 </td>
+                            <td>2023/4/10</td>
                             <td>-</td>
                             <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
+                            <td><font color="red"> Baseline Method</font></td>
+                            <td><font color="red">0.5671</font></td>
+                            <td><font color="red">0.4065</font></td>
+                            <td><font color="red">0.2358</font></td>
+                            <td><b><font color="red">0.3997</font></b></td>
 
                         </tr>
                         </tbody>
@@ -102,21 +102,21 @@
                                 <td>System Name</td>
                                 <td>R@1</td>
                                 <td>R@10</td>
-                                <td>R@50</td>
+                                <td>R@100</td>
                                 <td>MRR</td>
                             <td><b>Overall</b></td>
                             </tr>
                             <tr>
                                 <td>1</td>
+                                <td>2023/4/10</td>
                                 <td>-</td>
                                 <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
+                                <td><font color="red"> Baseline Method</font></td>
+                                <td><font color="red">0.3493</font></td>
+                                <td><font color="red">0.5366</font></td>
+                                <td><font color="red">0.6423</font></td>
+                                <td><font color="red">0.4412</font></td>
+                                <td><b><font color="red">2.0144</font></b></td>
                             </tr>
                         </tbody>
                     </table>
@@ -131,19 +131,19 @@
                             <td>System Name</td>
                             <td>R@1|mIoU</td>
                             <td>R@10|mIoU</td>
-                            <td>R@50|mIoU</td>
+                            <td>R@100|mIoU</td>
                             <td><b>Average</b></td>
                         </tr>
                         <tr>
                             <td>1</td>
+                            <td>2023/4/10</td>
                             <td>-</td>
                             <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
+                            <td><font color="red"> Baseline Method</font></td>
+                            <td><font color="red">0.1947</font></td>
+                            <td><font color="red">0.3397</font></td>
+                            <td><font color="red">0.4409</font></td>
+                            <td><b><font color="red">0.3291</font></b></td>
                          </tr>
                         </tbody>
                     </table>
@@ -162,7 +162,7 @@
                         </div>
                       </div>
                     <p class="card-text">
-                        <b>Signup to receive updates</b>: using <a href="http://tcci.ccf.org.cn/conference/2023/dldoc/NLPCC2023.SharedTask5.RegistrationForm.doc">this form</a> to send organizers.
+                        <b>Signup to receive updates</b>: using <a href="http://tcci.ccf.org.cn/conference/2023/dldoc/NLPCC2023.SharedTask5.RegistrationForm.doc">this form</a>
                     </p>
                     <p>The submission deadline is at 11:59 p.m. of the stated deadline date (UTC/GMT+08:00).</p>
                     <table class="table table-striped table-bordered">
@@ -173,23 +173,19 @@
                           </tr>
                           <tr>
                             <td>Release of detailed task guidelines & training data</td>
-                            <td>April 3, 2023</td>
-                          </tr>
-                          <tr>
-                            <td>Release of Test A data</td>
-                            <td>April 10, 2023</td>
+                            <td>April 6, 2023</td>
                           </tr>
                           <tr>
                             <td>Registration deadline</td>
                             <td>May 5, 2023</td>
                           </tr>
                           <tr>
-                            <td>Release of test B data</td>
+                            <td>Release of test data</td>
                             <td>May 21, 2023</td>
                           </tr>
                           <tr>
-                            <td>Participants’ final result submission (Test B) deadline:</td>
-                            <td>May 28, 2023</td>
+                            <td>Participants' results submission deadline</td>
+                            <td>May 31, 2023</td>
                           </tr>
                           <tr>
                             <td>Evaluation results release and call for system reports and conference paper</td>
