--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                         <b>Signup to receive updates</b>: using <a href="http://tcci.ccf.org.cn/conference/2023/dldoc/NLPCC2023.SharedTask5.RegistrationForm.doc">this form</a>
                     </p>
                     <p>The submission deadline is at 11:59 p.m. of the stated deadline date (UTC/GMT+08:00).</p> </br>
-                    <p>The results of test set A are updated every 7 days in Monday for 6 weeks (until May 21, 2023). Then the test set B will be released for the final evaluation. Participants can submit their results to the competition organizer via <a href="http://tcci.ccf.org.cn/conference/2023/dldoc/NLE-mail">E-mail</a> for result registration, and each team does not exceed 3 submissions per day.</p>
+                    <p>The results of test set A are updated every 7 days in Monday for 6 weeks (until May 21, 2023). Then the test set B will be released for the final evaluation. Participants can submit their results to the competition organizer via <a href="libincn@hnu.edu.cn">E-mail</a> for result registration, and each team does not exceed 3 submissions per day.</p>
                     <table class="table table-striped table-bordered">
                         <tbody>
                           <tr>
