--- a/leaderboard.html
+++ b/leaderboard.html
@@ -146,7 +146,7 @@
                                 <td>2023/4/21</td>
                                 <td>啊对对队</td>
                                 <td>-</td>
-                                <td><font color="black"> Baseline Method</font></td>
+                                <td><font color="black"> -</font></td>
                                 <td><font color="black">0.1786</font></td>
                                 <td><font color="black">0.2540</font></td>
                                 <td><font color="black">0.2967</font></td>
