--- a/leaderboard.html
+++ b/leaderboard.html
@@ -110,7 +110,7 @@
                             <td><font color="black">0.1422</font></td>
                             <td><font color="black">0.7520</font></td>
                             <td><font color="black">0.1893</font></td>
-                            <td><b><font color="red">0.1132</font></b></td>
+                            <td><b><font color="black">0.1132</font></b></td>
                         </tr>
                         </tbody>
                     </table>
