--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                           Awards will be granted to the top 3 teams. Every track has three prizes (￥3000, ￥2000, ￥1000), where all prizes count ￥18000.
                         </div>
                         </div>
-                          The top 3 participating teams will be certificated by NLPCC and CCF-NLP, as well as awarded cash rewards.
+                          The top 1 participating team in each track will be certificated by NLPCC and CCF-NLP. Cash rewards are granted for the top-3 teams for each track.
                             </br>
                             </br>
                             The first prize (*1): ￥3000
