--- a/leaderboard.html
+++ b/leaderboard.html
@@ -222,8 +222,8 @@
                             <td>April 6, 2023</td>
                           </tr>
                           <tr>
-                            <td>Registration deadline</td>
-                            <td>May 5, 2023</td>
+                            <td>Registration deadline (Same as the Test B submission deadline)</td>
+                            <td>May 28, 2023</td>
                           </tr>
                           <tr>
                             <td>Release of test data</td>
@@ -231,7 +231,7 @@
                           </tr>
                           <tr>
                             <td>Participants' results submission deadline</td>
-                            <td>May 31, 2023</td>
+                            <td>May 28, 2023</td>
                           </tr>
                           <tr>
                             <td>Evaluation results release and call for system reports and conference paper</td>
