--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
                             <td>April 10, 2023</td>
                           </tr>
                           <tr>
-                            <td>Registration deadline</td>
-                            <td>May 5, 2023</td>
+                            <td>Registration deadline (Same as the Test B submission deadline)</td>
+                            <td>May 28, 2023</td>
                           </tr>
                           <tr>
                             <td>Release of test B data</td>
